Fixed script item spacing and added sidebar scroll animation

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -212,6 +212,11 @@
     div ul {
       list-style-type: disc;
     }
+    div {
+      p {
+        padding-bottom: 30px;
+      }
+    }
   }
   .example-discussion {
     background-color: #fff8ed;
